# QuantaLearnLMS

./: .replit  FINAL_RENDER_SETUP.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_FIX.md  SENSOR_INTEGRATION_GUIDE.md  app.py  app_clean.py  app_clean_production.py  app_complete.py  app_final.py  app_final_working.py  app_production_final.py  auth.py  cookies.txt  lms.py  main.py  main_production.py  migrate_production.py  models.py  mqtt_client.py  pyproject.toml  render-requirements.txt  render.yaml  replit.md  scheduler.py  settings.py  transport.py  utils.py
attached_assets/: Pasted-File-opt-render-project-src-venv-lib-python3-13-site-packages-sqlalchemy-engine-url-py-line-922-1756968133329_1756968133330.txt  Pasted-INFO-root-Using-PostgreSQL-database-2025-09-04-16-48-09-0000-55-INFO-Starting-gunicorn-23-0-0-1757004609753_1757004609754.txt  Pasted-Pruning-cache-at-opt-render-cache-python-uv-cache-Removed-1457-files-29-4MiB-Uploading-bui-1756967129710_1756967129712.txt  Pasted-You-are-Replit-Code-Generator-Build-a-complete-production-grade-Flask-Vanilla-JS-LMS-for-schools-1756929485282_1756929485284.txt
static/css/: style.css
static/js/: dashboard.js  forms.js  lms.js  main.js  settings.js  transport.js
templates/: 404.html  500.html  base.html  course_detail.html  courses.html  dashboard.html  lms.html  login.html  profile.html  reports.html  settings.html  tracking.html  tracking_map.html  transport.html  users.html
templates/modals/: add_bus.html  add_course.html  add_user.html  bus_details.html  create_assignment.html  create_bus.html  create_course.html  (+1 more)
