[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-migrate>=4.1.0",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "python-dotenv>=1.1.1",
    "paho-mqtt>=2.1.0",
    "haversine>=2.9.0",
    "flask-socketio>=5.5.1",
    "apscheduler>=3.11.0",
    "werkzeug>=3.1.3",
    "eventlet>=0.40.3",
    "sqlalchemy>=2.0.43",
]
